--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,13 +29,14 @@ jobs:
 
   test:
     name: Code Tests
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     needs: quality
 
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
@@ -47,4 +48,4 @@ jobs:
 
       - name: Test with pytest
         run: |
-          pytest --cov=, --cov-report=xml
+          pytest --cov=. --cov-report=xml
